--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
                     <h2 class="text-xl font-extrabold mb-3">Projects</h2>
                     <div class="space-y-3">
                         <div class="job-entry">
-                            <h3 class="text-lg font-semibold">Tab Tag Tree - Chrome Extension</h3>
+                            <h3 class="text-lg font-semibold">Surflow - Chrome Extension</h3>
                             <p class="italic text-sm">Personal Project | <a
                                     href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
                                     class="text-blue-600">Chrome Store</a></p>
                             <ul class="mt-2 text-gray-700 list-disc list-inside">
-                                <li>Chrome extension for efficient tab management using tags and tree structure</li>
+                                <li>Efficiently streamline the browsing and tab management experience</li>
                                 <li>Built with TypeScript, React, and Chrome Extension APIs</li>
                             </ul>
                             <div class="mt-2 flex flex-wrap gap-2">
@@ -322,7 +322,6 @@
                                 <span class="tag">CUDA</span>
                             </div>
                         </div>
-                
                         <div class="job-entry">
                             <h3 class="text-lg font-semibold">TVM and XLA Optimization for TPU-Accelerated Inference proto</h3>
                             <p class="italic text-sm">TUM | Advanced Computer Architecture Seminar | 02/23</p>
@@ -337,6 +336,26 @@
                                 <span class="tag">TVM</span>
                                 <span class="tag">XLA</span>
                                 <span class="tag">Microbenchmarking</span>
+                            </div>
+                        </div>
+                        <div class="job-entry">
+                            <h3 class="text-lg font-semibold">Gem5 simulation model to evaluate Intel Skylake-based CPU</h3>
+                            <p class="italic text-sm">Personal Project | <a
+                                    href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
+                                    class="text-blue-600">Chrome Store</a></p>
+                            <ul class="mt-2 text-gray-700 list-disc list-inside">
+                                <li>Developed a gem5 simulation model to evaluate Intel Skylake-based CPU performance for HPC workloads over a weekend.</li>
+                                <li>Implemented a custom out-of-order core model in C++ within gem5’s x86 framework, simulating a 4-core Skylake processor with a 3-level cache hierarchy.</li>
+                                <li>Configured gem5 to run an OpenMP-parallelized matrix multiplication benchmark and an MPI-based stencil computation workload.</li>
+                                <li>Analyzed cache miss rates and branch prediction accuracy, optimizing prefetching to reduce memory latency by 12% in simulations.</li>
+                            </ul>
+                            <div class="mt-2 flex flex-wrap gap-2">
+                                <span class="tag">JavaScript</span>
+                                <span class="tag">React</span>
+                                <span class="tag">Chrome API</span>
+                                <span class="tag">SQLite</span>
+                                <span class="tag">HTML</span>
+                                <span class="tag">CSS</span>
                             </div>
                         </div>
                     </div>
