--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
                         </div>
                         <div class="job-entry">
                             <h3 class="text-lg font-semibold">Gem5 simulation model to evaluate Intel Skylake-based CPU</h3>
-                            <p class="italic text-sm">Personal Project | <a
-                                    href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
-                                    class="text-blue-600">Chrome Store</a></p>
+                            <p class="italic text-sm">Case study</p>
                             <ul class="mt-2 text-gray-700 list-disc list-inside">
                                 <li>Developed a gem5 simulation model to evaluate Intel Skylake-based CPU performance for HPC workloads over a weekend.</li>
                                 <li>Implemented a custom out-of-order core model in C++ within gem5’s x86 framework, simulating a 4-core Skylake processor with a 3-level cache hierarchy.</li>
