--- a/index.html
+++ b/index.html
@@ -342,18 +342,14 @@
                             <h3 class="text-lg font-semibold">Gem5 simulation model to evaluate Intel Skylake-based CPU</h3>
                             <p class="italic text-sm">Case study</p>
                             <ul class="mt-2 text-gray-700 list-disc list-inside">
-                                <li>Developed a gem5 simulation model to evaluate Intel Skylake-based CPU performance for HPC workloads over a weekend.</li>
-                                <li>Implemented a custom out-of-order core model in C++ within gem5’s x86 framework, simulating a 4-core Skylake processor with a 3-level cache hierarchy.</li>
-                                <li>Configured gem5 to run an OpenMP-parallelized matrix multiplication benchmark and an MPI-based stencil computation workload.</li>
-                                <li>Analyzed cache miss rates and branch prediction accuracy, optimizing prefetching to reduce memory latency by 12% in simulations.</li>
+                                <li>Developed a gem5 simulation model to evaluate Intel Skylake-based CPU performance for HPC workloads</li>
+                                <li>Implemented a custom out-of-order core model in C++ within gem5’s x86 framework, simulating a 4-core Skylake processor with a 3-level cache hierarchy</li>
+                                <li>Configured gem5 to run an OpenMP-parallelized matrix multiplication benchmark and an MPI-based stencil computation workload</li>
+                                <li>Analyzed cache miss rates and branch prediction accuracy, optimizing prefetching to reduce memory latency by 12% in simulations</li>
                             </ul>
                             <div class="mt-2 flex flex-wrap gap-2">
-                                <span class="tag">JavaScript</span>
-                                <span class="tag">React</span>
-                                <span class="tag">Chrome API</span>
-                                <span class="tag">SQLite</span>
-                                <span class="tag">HTML</span>
-                                <span class="tag">CSS</span>
+                                <span class="tag">C++</span>
+                                <span class="tag">gem5</span>
                             </div>
                         </div>
                     </div>
